[gd_scene load_steps=4 format=2]

[ext_resource path="res://objects/hitbox.gd" type="Script" id=1]
[ext_resource path="res://objects/collision_volume.tscn" type="PackedScene" id=2]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0.87, 0.32, 0.32, 0.33 )

[node name="Hitbox" instance=ExtResource( 2 )]
monitorable = false
script = ExtResource( 1 )

[node name="MeshInstance" parent="." index="1"]
material/0 = SubResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_Hitbox_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Hitbox_area_exited"]
